Most updated init

--- a/README.org
+++ b/README.org
@@ -1,4 +1,6 @@
 :PROPERTIES:
+#+REVEAL_ROOT: http://cdn.jsdelivr.net/reveal.js/2.5.0/
+#+REVEAL_HLEVEL 2
 #+PROPERTY: header args :tangle: init.el
 #+auto_tangle: t
 :END:
@@ -33,26 +35,20 @@
 
 * Straight Configuration + Package Repositories
 #+begin_src emacs-lisp :tangle init.el
-    (defvar bootstrap-version)
-    (let ((bootstrap-file
-           (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
-          (bootstrap-version 6))
-      (unless (file-exists-p bootstrap-file)
-        (with-current-buffer
-            (url-retrieve-synchronously
-             "https://raw.githubusercontent.com/radian-software/straight.el/develop/install.el"
-             'silent 'inhibit-cookies)
-          (goto-char (point-max))
-          (eval-print-last-sexp)))
-      (load bootstrap-file nil 'nomessage))
-    (straight-use-package 'use-package)
-
-    (use-package exec-path-from-shell
-      :straight t
-      :init
-      (when (memq window-system '(mac ns x))
-        (exec-path-from-shell-initialize)))
-
+  (defvar bootstrap-version)
+  (let ((bootstrap-file
+         (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
+        (bootstrap-version 6))
+    (unless (file-exists-p bootstrap-file)
+      (with-current-buffer
+          (url-retrieve-synchronously
+           "https://raw.githubusercontent.com/radian-software/straight.el/develop/install.el"
+           'silent 'inhibit-cookies)
+        (goto-char (point-max))
+        (eval-print-last-sexp)))
+    (load bootstrap-file nil 'nomessage))
+  (straight-use-package 'use-package)
+  
   (setq package-archives ;; if packages fail to download M-x package-refresh-contents
         '(("melpa" . "https://melpa.org/packages/")
           ("elpa" . "https://elpa.gnu.org/packages/")))
@@ -64,41 +60,50 @@
   (eval-when-compile (require 'use-package))
 #+end_src
 
+#+RESULTS:
+: use-package
+
 * Mac Settings
 #+begin_src emacs-lisp :tangle init.el 
-(setq frame-resize-pixelwise t)
-(when (eq system-type 'darwin) 
-  (setq mac-option-modifier 'alt)
-  (setq mac-command-modifier 'meta)
-  (global-set-key [kp-delete] 'delete-char))
+  (use-package exec-path-from-shell
+    :straight t
+    :init
+    (when (memq window-system '(mac ns x))
+      (exec-path-from-shell-initialize)))
 
-(use-package default-text-scale
-  :straight t
-  :config
-  (global-set-key (kbd "M-=") 'default-text-scale-increase)
-  (global-set-key (kbd "M--") 'default-text-scale-decrease))
+  (setq frame-resize-pixelwise t)
+  (when (eq system-type 'darwin) 
+    (setq mac-option-modifier 'alt)
+    (setq mac-command-modifier 'meta)
+    (global-set-key [kp-delete] 'delete-char))
 
-(global-set-key (kbd "M-q") 'save-buffers-kill-emacs)
-(global-set-key (kbd "M-h") 'ns-do-hide-emacs)
-(add-hook 'window-setup-hook 'toggle-frame-maximized t)
+  (use-package default-text-scale
+    :straight t
+    :config
+    (global-set-key (kbd "M-=") 'default-text-scale-increase)
+    (global-set-key (kbd "M--") 'default-text-scale-decrease))
+
+  (global-set-key (kbd "M-q") 'save-buffers-kill-emacs)
+  (global-set-key (kbd "M-h") 'ns-do-hide-emacs)
+  (add-hook 'window-setup-hook 'toggle-frame-maximized t)
 #+end_src
 
 * General.el
 #+begin_src emacs-lisp :tangle init.el 
-(use-package general
-  :straight t
-  :config
-  (general-auto-unbind-keys)
-  (general-evil-setup)
+  (use-package general
+    :straight t
+    :config
+    (general-auto-unbind-keys)
+    (general-evil-setup)
 
-  (general-unbind 'normal dired-mode-map "SPC")
+    (general-unbind 'normal dired-mode-map "SPC")
 
-  (general-create-definer leader-key-def
-    ;; :keymaps '(normal insert visual emacs)
-    :states '(normal insert visual emacs)
-    :keymaps 'override
-    :prefix "SPC"
-    :global-prefix "C-SPC"))
+    (general-create-definer leader-key-def
+      ;; :keymaps '(normal insert visual emacs)
+      :states '(normal insert visual emacs)
+      :keymaps 'override
+      :prefix "SPC"
+      :global-prefix "C-SPC"))
 #+end_src
 * Dired
 #+begin_src emacs-lisp :tangle init.el 
@@ -143,58 +148,62 @@
     (define-fringe-bitmap 'git-gutter-fr:deleted [128 192 224 240] nil nil 'bottom))
 
   (defun ramon/template-insert-gitignore()
+    "Insert .gitignore for specified language"
     (interactive)
     (let* ((dir (concat "~/.emacs.d/" "templates/gitignore/"))
-	   (files (directory-files dir nil ".*\\.gitignore"))
-	   (pick (yas-choose-value (mapcar #'file-name-sans-extension files))))
+           (files (directory-files dir nil ".*\\.gitignore"))
+           (pick (yas-choose-value (mapcar #'file-name-sans-extension files))))
       (insert-file-contents (concat dir (concat pick ".gitignore")))))
 #+end_src
 * Key binds
 #+begin_src emacs-lisp :tangle init.el 
-(global-set-key (kbd "M-/") 'comment-line)
-(electric-pair-mode)
+  (global-set-key (kbd "M-/") 'comment-line)
+  (electric-pair-mode)
 
-(use-package undo-fu)
+  (use-package undo-fu)
 
-(use-package evil
-  :demand t
-  :bind (("<escape>" . keyboard-escape-quit))
-  :init
-  (setq evil-want-keybinding nil)
-  (setq evil-undo-system 'undo-fu)
-  (setq evil-want-C-u-scroll t)
-  :config
-  (evil-set-leader '(normal visual) (kbd "SPC"))
-  (evil-mode 1))
+  (use-package evil
+    :demand t
+    :bind (("<escape>" . keyboard-escape-quit))
+    :init
+    (setq evil-want-keybinding nil)
+    (setq evil-undo-system 'undo-fu)
+    (setq evil-want-C-u-scroll t)
+    :config
+    (evil-set-leader '(normal visual) (kbd "SPC"))
+    (evil-mode 1))
 
-(use-package evil-collection
-  :after evil
-  :config
-  (setq evil-want-integration t)
-  (setq evil-respect-visual-line-mode t)
-  :init
-  (evil-collection-init))
-(custom-set-variables
- ;; custom-set-variables was added by Custom.
- ;; If you edit it by hand, you could mess it up, so be careful.
- ;; Your init file should contain only one such instance.
- ;; If there is more than one, they won't work right.
- '(package-selected-packages
-   '(magit which-key helpful orderless marginalia consult winum vertico evil-collection evil undo-fu use-package)))
-(custom-set-faces
- ;; custom-set-faces was added by Custom.
- ;; If you edit it by hand, you could mess it up, so be careful.
- ;; Your init file should contain only one such instance.
- ;; If there is more than one, they won't work right.
- )
+  (use-package evil-collection
+    :after evil
+    :config
+    (setq evil-want-integration t)
+    (setq evil-respect-visual-line-mode t)
+    :init
+    (evil-collection-init))
+  (custom-set-variables
+   ;; custom-set-variables was added by Custom.
+   ;; If you edit it by hand, you could mess it up, so be careful.
+   ;; Your init file should contain only one such instance.
+   ;; If there is more than one, they won't work right.
+   '(package-selected-packages
+     '(magit which-key helpful orderless marginalia consult winum vertico evil-collection evil undo-fu use-package)))
+  (custom-set-faces
+   ;; custom-set-faces was added by Custom.
+   ;; If you edit it by hand, you could mess it up, so be careful.
+   ;; Your init file should contain only one such instance.
+   ;; If there is more than one, they won't work right.
+   )
 
-(use-package evil-multiedit)
-(evil-multiedit-default-keybinds)
+  (use-package evil-multiedit)
+  (evil-multiedit-default-keybinds)
 
-(use-package evil-snipe
-  :straight t
-  :init
-  (evil-snipe-mode))
+  (use-package evil-snipe
+    :straight t
+    :init
+    (evil-snipe-mode))
+
+  (use-package avy
+    :straight t)
 #+end_src
 
 * Mini buffer
@@ -236,6 +245,7 @@
 ** Base Evil Org
 #+begin_src emacs-lisp :tangle init.el 
   (use-package org 
+    :straight t
     :defer t
     :config
     (setq
@@ -334,6 +344,9 @@
     :straight t)
 
   (use-package ox-reveal)
+  (setq org-reveal-root "/Users/tahpramen/reveal.js-master")
+  (use-package htmlize ;; Needed for syntax highlighting in ord->reveal presentation
+    :straight t)
 
   (use-package org-download
     :straight t
@@ -349,12 +362,15 @@
     ;; https://github.com/emacs-lsp/lsp-mode/issues/2842#issuecomment-870807018
     (setq-local buffer-file-name (->> babel-info caddr (alist-get :tangle)))
     (lsp))
-  
+
   (defun org-babel-edit-prep:rust (babel-info) 
     ;; to add more language support, see:
     ;; https://github.com/emacs-lsp/lsp-mode/issues/2842#issuecomment-870807018
     (setq-local buffer-file-name (->> babel-info caddr (alist-get :tangle)))
     (lsp))
+  
+  (org-babel-do-load-languages
+   'org-babel-load-languages '((python . t)))
 
   (use-package toc-org
     :straight t
@@ -376,36 +392,17 @@
     (setq org-fancy-priorities-list '("HIGH" "MEDIUM" "LOW"))
     org-todo-keywords '((sequence "HW")))
 
-  (use-package org-modern
-    :straight t
-    :config
-    (setq
-     ;; Edit settings
-     org-auto-align-tags nil
-     org-tags-column 0
-     org-catch-invisible-edits 'show-and-error
-     org-special-ctrl-a/e t
-     org-insert-heading-respect-content t
+  (use-package org-bullets
+    :hook
+    (org-mode . org-bullets-mode))
 
-     ;; Org styling, hide markup etc.
-     org-ellipsis "  ⬎ "
-     org-modern-table nil
-     org-hide-emphasis-markers t
-     org-startup-folded 'show2levels
-     org-list-demote-modify-bullet
-     '(("+" . "*") ("*" . "-") ("-" . "+"))
 
-     ;; Agenda styling
-     org-agenda-tags-column 0
-     org-agenda-block-separator ?─
-     org-agenda-time-grid
-     '((daily today require-timed)
-       (800 1000 1200 1400 1600 1800 2000)
-       " ┄┄┄┄┄ " "┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄")
-     org-agenda-current-time-string
-     "⭠ now ─────────────────────────────────────────────────")
-
-    (global-org-modern-mode))
+  (setq org-ellipsis "  ⬎ ")
+  (setq org-hide-emphasis-markers t)
+  (setq org-startup-folded 'show2levels)
+  (setq org-insert-heading-respect-content t)
+  (setq org-list-demote-modify-bullet
+        '(("+" . "*") ("*" . "-") ("-" . "+")))
 #+end_src
 * Completion
 ** Languages
@@ -603,7 +600,6 @@
 	  doom-modeline-major-mode-icon t
 	  doom-modeline-major-mode-color-icon t))
 #+end_src
-
 * Window Management
 #+begin_src emacs-lisp :tangle init.el 
 (use-package winum :straight t :init (winum-mode))
@@ -640,6 +636,7 @@
 
     "f" '(:ignore t :which-key "Find")
     "f f" 'find-file
+    "f w" '(avy-goto-char-timer :which-key "avy-find-word")
 
     "g" '(:ignore t :which-key "Git")
     "g g" 'magit-status
@@ -712,11 +709,16 @@
         (leader-key-def "w 7" 'winum-select-window-7)
         (leader-key-def "w 8" 'winum-select-window-8)
         map))
+
+  (add-hook 'org-mode-hook (lambda () (local-unset-key (kbd "M-h"))))
 #+end_src
 * Miscellaneous
 #+begin_src emacs-lisp :tangle init.el 
+  (use-package ein
+    :straight t)
+
   (setq max-lisp-eval-depth 10000)  ;; Debugging 
-  (setq debug-on-error t)           ;; Debugging 
+  ;; (setq debug-on-error t)           ;; Debugging 
 
   (eldoc-mode -1)
   (save-place-mode 1)
@@ -772,4 +774,7 @@
          ,@(mapcar (lambda (adform)
                      `(advice-remove ,(car adform) ,(nth 2 adform)))
                    adlist))))
+
+  (load "~/.emacs.d/chatgpt.el")
+  (require 'chatgpt)
 #+end_src
