--- a/README.org
+++ b/README.org
@@ -85,6 +85,7 @@
 
   (global-set-key (kbd "M-q") 'save-buffers-kill-emacs)
   (global-set-key (kbd "M-h") 'ns-do-hide-emacs)
+  (global-set-key (kbd "M-v") 'yank)
   (add-hook 'window-setup-hook 'toggle-frame-maximized t)
 #+end_src
 
